--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -1,53 +1,5 @@
-.containerLogin100 {
-    background-image: url(https://colorlib.com/etc/lf/Login_v4/images/bg-01.jpg);
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 15px;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-.formLogin{
-    width: 500px;
-    background: aliceblue;
-    border-radius: 10px;
-    overflow: hidden;
 
-}
-.formLogin-title{
-    display: block;
-    font-size: 39px;
-    color: #333;
-    line-height: 1.2;
-    text-align: center;
-}
-.inputLogin{
-    color: #333;
-    line-height: 1.2;
-    display: block;
-    width: 100%;
-    height: 55px;
-    background: 0 0;
-    padding: 0 7px 0 43px;
-
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body, html {
-    height: 100%;
-    font-family: Poppins-Regular, sans-serif;
-}
-
-/*---------------------------------------------*/
 a {
-    font-family: Poppins-Regular;
     font-size: 14px;
     line-height: 1.7;
     color: #666666;
@@ -67,13 +19,7 @@ a:hover {
     color: #a64bf4;
 }
 
-/*---------------------------------------------*/
-h1,h2,h3,h4,h5,h6 {
-    margin: 0;
-}
-
 p {
-    font-family: Poppins-Regular;
     font-size: 14px;
     line-height: 1.7;
     color: #666666;
@@ -85,8 +31,6 @@ ul, li {
     list-style-type: none;
 }
 
-
-/*---------------------------------------------*/
 input {
     outline: none;
     border: none;
@@ -363,17 +307,12 @@ iframe {
     left: 0;
 }
 
-
 /*//////////////////////////////////////////////////////////////////
 [ Social item ]*/
 .login100-social-item {
     font-size: 25px;
     color: #fff;
-
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
+    text-decoration: none;
     display: flex;
     justify-content: center;
     align-items: center;
