--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -9,42 +9,30 @@ a {
     -o-transition: all 0.4s;
     -moz-transition: all 0.4s;
 }
-
 a:focus {
     outline: none !important;
 }
-
 a:hover {
     text-decoration: none;
     color: #a64bf4;
 }
-
 p {
     font-size: 14px;
     line-height: 1.7;
     color: #666666;
     margin: 0;
 }
-
-ul, li {
-    margin: 0;
-    list-style-type: none;
-}
-
 input {
     outline: none;
     border: none;
 }
-
 textarea {
     outline: none;
     border: none;
 }
-
 textarea:focus, input:focus {
     border-color: transparent !important;
 }
-
 input:focus::-webkit-input-placeholder { color:transparent; }
 input:focus:-moz-placeholder { color:transparent; }
 input:focus::-moz-placeholder { color:transparent; }
@@ -80,17 +68,13 @@ iframe {
     border: none !important;
 }
 
-/*//////////////////////////////////////////////////////////////////
-[ Utility ]*/
 .txt1 {
-    font-family: Poppins-Regular;
     font-size: 14px;
     line-height: 1.5;
     color: #666666;
 }
 
 .txt2 {
-    font-family: Poppins-Regular;
     font-size: 14px;
     line-height: 1.5;
     color: #333333;
@@ -139,7 +123,6 @@ iframe {
 
 .login100-form-title {
     display: block;
-    font-family: Poppins-Bold;
     font-size: 39px;
     color: #333333;
     line-height: 1.2;
@@ -155,7 +138,6 @@ iframe {
 }
 
 .label-input100 {
-    font-family: Poppins-Regular;
     font-size: 14px;
     color: #333333;
     line-height: 1.5;
@@ -184,8 +166,7 @@ iframe {
 }
 
 /*---------------------------------------------*/
-.focus-input100,
-.focus-inputRegis {
+.focus-input100{
     position: absolute;
     display: block;
     width: 100%;
@@ -194,8 +175,7 @@ iframe {
     left: 0;
     pointer-events: none;
 }
-.focus-input100::after,
-.focus-inputRegis::after {
+.focus-input100::after{
     content: attr(data-symbol);
     font-family: Material-Design-Iconic-Font;
     color: #adadad;
@@ -210,8 +190,7 @@ iframe {
     padding-left: 13px;
     padding-top: 3px;
 }
-.focus-input100::before,
-.focus-inputRegis::before {
+.focus-input100::before{
     content: "";
     display: block;
     position: absolute;
@@ -223,7 +202,7 @@ iframe {
     transition: all 0.4s;
 }
 .input100:focus + .focus-input100::before,
-.inputRegis:focus + .focus-inputRegis::before {
+.inputRegis:focus + .focus-input100::before {
     width: 100%;
 }
 .has-val.input100 + .focus-input100::before {
